--- a/css/main.css
+++ b/css/main.css
@@ -51,11 +51,11 @@ p {
     padding: 0 2em;
 }
 
-/*The widths are in a percentage!*/
 header {
 	text-align: center;
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	flex-flow: row wrap;
 	border-bottom: 3px solid #77a466;
 	margin: 0;
@@ -94,8 +94,6 @@ header nav ul li a{
 	color:#77a466;
 }
 
-/*The widths are in a percentage!*/
-
 .top-section,
 .bottom-section {
 	display: flex;
@@ -128,20 +126,6 @@ header nav ul li a{
 	border-top: 1px solid #eee;
 }
 
-.section-one h4 {
-	padding: 0.6em 0;
-}
-
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
-
-.section-two h4,
-.section-three h4 {
-	padding: 1em 0 0 0;
-}
-
 .menu {
 	list-style: none;
 	padding: 0;
@@ -167,13 +151,12 @@ header nav ul li a{
 	text-align: center;
 }
 
-/*The widths are in a percentage!*/
 footer {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-flow: row wrap;
-	border-top: 3px solid #eee;
+	border-top: 1px solid #eee;
 	text-align: center;
 	width: 100%;
 }
@@ -182,4 +165,61 @@ footer span {
 	text-transform: lowercase;
 	color: #77a466;
 	font-size: .875em;
+}
+
+/* ----------------- TABLET STYLES ----------------- */
+
+@media all and (min-width: 768px) {
+	.bottom-section {
+		justify-content: space-between;
+		align-items: flex-start;
+		border-top: 1px solid #eee;
+	}
+
+	.section-one,
+	.section-two,
+	.section-three {
+		border-top: none;
+		flex-basis: 30%;
+		text-align: center;
+	}
+
+	.section-two {
+		padding: 0 20px;
+		border-right: 1px solid #eee;
+		border-left: 1px solid #eee;
+	}
+}
+
+
+/* ----------------- DESKTOP STYLES ----------------- */
+
+@media all and (min-width: 1200px) {
+	header {
+		justify-content: space-between;
+	}
+
+	header h1 {
+		width: 30%;
+		padding: 0;
+		border-bottom: none;
+		text-align: left;
+	}
+
+	header nav {
+		width: 50%;
+	}
+
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	h4 {
+		padding: 1em 0;
+	}
+
+	.bottom-section {
+		margin-top: 1em;
+	}
 }
